--- a/Lead.html
+++ b/Lead.html
@@ -15,7 +15,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="bgpillars fullwidth">
+    <body class="bgpillars">
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
@@ -44,30 +44,47 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Lead Generation</h4>
-                                <p class="grey-text">We will take care of your current customers whilst gaining more leads for your business using our sales team's proven record of success. We can tie into your overarching sales plan or develop a new strategy with you.</p>
-
+                                <p class="grey-text">Lead Generation is a marketing strategy that involves capturing the interest of prospects in the company’s offered products or services in order to develop a sales pipeline. At Deegeelab we use different techniques to generate leads including search engine optimisation, email marketing, direct mail, print advertising, online advertising and paid search.</p>
+                                <h6>What We Offer at Deegeelab</h6>
                                 <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Content Marketing</td>                                
+                                        <td>Content Marketing</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Social Media Marketing</td>                                
+                                        <td>Social Media Marketing</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> SEO</td>                                
+                                        <td>Search Engine Optimization</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Website Optimization</td>                                
+                                        <td>Website Optimization</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Email Marketing</td>                                
+                                        <td>Email Marketing</td>                                
                                     </tr>
                                 </table>
+                                <h6>Benefits of Lead Generation to Your Business</h6>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Boost your sales</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Gain new customers</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Increase followers and email subscribers</td>                                
+                                    </tr>
+                                </table>
+                                <h6>Why Partner with Deegeelab to Generate and Nurture Leads</h6>
+                                <p>Today, businesses no longer focus on sending email blasts or setting up mass advertisements to convert leads into customers. At Deegeelab, we believe that it is not enough to capture leads and immediately prompt them to purchase your offers. Some prospects need more time to think about the products or services. Hence, we see to it that we deliver relevant content that can help your customers decide. <br/>We will take care of your current customers whilst gaining more leads for your business using our sales team's tried and tested strategies. We can tie into your overarching sales plan or develop a new strategy with you.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                                 <div style="height: 200px;"></div>
                             </div>
