--- a/backend.html
+++ b/backend.html
@@ -15,7 +15,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="bgpillars fullwidth">
+    <body class="bgpillars">
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
@@ -44,49 +44,59 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Customer Support (Back End)</h4>
-                                <p class="grey-text">Make your business expansion your focus. We will turn the average process such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours. We at Deegeelab can do the following back-end customer support processes:</p>
+                                <p class="grey-text">Make your business expansion your focus by letting us handle your back-end customer support needs. We will turn average processes such as office administration, account creation, outbound chat support and document processing into a thing of the past by moving it from your office to ours.<br/>Deegeelab understands your pain points. As a business owner like you, we know how repetitive processes like data entry, document filing, and email management can take up a lot of time to finish.</p>
+                                <h6>Features of Deegeelab Back-end Customer Support</h6>
                                 <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Handle office admin processes</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Attract new customers into your systems.</td>                                
-                                    </tr>                                
+                                        <td>Attract new customers into your systems</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Enter data in a CRM system or update customer records</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Validate and provision customer orders and set-up billing and payment preferences, following your processes and your timeframes.</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Digitize your business to increase its accessibility.</td>                                
-                                    </tr>                                
+                                        <td>Digitize your business to increase its accessibility</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Handle emails Inbound/Outbound Chat Support</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Handle all paperwork that can be processed online</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>File documents</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Send electronic paper transactions</td>                                
-                                    </tr>                                
+                                    </tr>
+                                </table>
+                                <h6>Benefits of Using Back-end Customer Support</h6>
+                                <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Manage Accounting Applications</td>                                
-                                    </tr>                                
+                                        <td>Enjoy hassle-free management of your business operations</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Get more time for product and service development</td>                                
+                                    </tr>
                                 </table>
+                                <h6>Perks of Working with Deegeelab</h6>
+                                <p>Customers rarely observe what happens behind the scene of a business, but the back-end processes play a significant role in ensuring their satisfaction. At Deegeelab, we manage and improve your back-office support processes, so your clients enjoy a smooth experience when they avail your products or services, request replacements, set-up payment option, access your website or send inquiries through your social media channels.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                                 <div style="height: 200px;"></div>
                             </div>
