--- a/frontend.html
+++ b/frontend.html
@@ -15,7 +15,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="bgpillars fullwidth">
+    <body class="bgpillars">
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
@@ -44,56 +44,79 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Customer Support (Front End)</h4>
-                                <p class="grey-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancelations and other queries from the customers. We provide on going support to the customers in order to keep the business running as smoothly as possible.</p>
+                                <p class="grey-text">Our team will be responsible for acting as a liaison between customers and companies. We also assist in processing complaints, orders, errors, account questions, billing, cancellations and other queries from the customers. We provide the following services to customers to keep the business running as smoothly as possible:</p>
+                                <h6>Features of Deegeelab Customer Support</h6>
                                 <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Resolve customer complaints via phone, email, mail, or social media.</td>                                
+                                        <td>Resolve customer complaints via phone, email, mail, or social media</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Use telephones to reach out to customers.</td>                                
-                                    </tr>                                
+                                        <td>Reach out to customers via phone call</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Advise on company information.</td>                                
-                                    </tr>                                
+                                        <td>Offer business consultation</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Act as the company gatekeeper.</td>                                
-                                    </tr>                                
+                                        <td>Act as the company gatekeeper</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Suggest solutions for customer problems.</td>                                
-                                    </tr>                                
+                                        <td>Suggest solutions for customer problems</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Inform customer of deals and promotions.</td>                                
-                                    </tr>                                
+                                        <td>Announce exclusive deals and promotions</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Sell products and services.</td>                                
-                                    </tr>                                
+                                        <td>Sell products and services</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Utilize computer technology to handle high call volumes.</td>                                
-                                    </tr>                                
-                                    <tr>
-                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Work with customer service manager to ensure proper customer service is being delivered.</td>                                
-                                    </tr>                                
+                                        <td>Coordinate with customer service manager</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Close out or open call records.</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Read from scripts.</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Handle changes in service policies or renewals.</td>                                
-                                    </tr>                                
+                                    </tr>
                                 </table>
+                                <h6>Benefits of Availing a Front-End Customer Support Service</h6>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>No need to worry on your overhead expenses </td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Promote customer loyalty</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Customer referral</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Increase in customer satisfaction and revenue</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Helps promote business brand and reputation</td>                                
+                                    </tr>
+                                </table>
+                                <h6>Why Work with Us</h6>
+                                <p>As your partner in growth, we at Deegeelab take the time to handle issues, connect with your customers, and offer valuable insights to help your business grow. We guarantee to make you feel right at home when you decide to let our professionals handle your front-end customer support. For a reasonable price, our friendly specialists will take over your front-office customer support processes.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                                 <div style="height: 200px;"></div>
                             </div>
