--- a/marketing.html
+++ b/marketing.html
@@ -15,7 +15,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="bgpillars fullwidth">
+    <body class="bgpillars">
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white">
@@ -44,49 +44,59 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Digital Marketing</h4>
-                                <p class="grey-text">We develop customised digital marketing strategies using SEO, Social Media Marketing, email marketing, and other techniques to drive traffic to client's website, engage with customers, and gain more leads. Our team also works on the physical and technical aspects of the client’s website. Also, we create engaging and relevant written, graphic, and video content that are in line with the brand. To give our clients the winning edge that they deserve we do the following:</p>
+                                <p class="grey-text">Digital marketing is one of the main driving forces of an online business. It is a popular technique used by businesses to build their brand and engage with their target market. To come up with a sound digital marketing strategy, a detailed keyword and competitor research and market analysis are in order.<br/>Additionally, before you can create a digital marketing plan, you must also understand the technical aspects of building a website, writing convincing copies and web content and publishing social media posts.</p>
+                                <h6>Features of Deegeelab Digital Marketing Service</h6>
                                 <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Develop and implement SEO and PPC strategies</td>                                
+                                        <td>In-depth analysis of your target market, social media channels and websites</td>                                
                                     </tr>
                                     <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Create and manage link building strategies, content marketing strategies, and social media presences</td>                                
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Tailor-made written, graphic and video content</td>                                
                                     </tr>
                                     <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Innovate and present new marketing platforms and strategies</td>                                
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Well-written copies for your products and services</td>                                
                                     </tr>
                                     <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Develop engaging online content including clickbait, forums, videos, graphics, and blogs; monitor and analyse content success</td>                                
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Optimised Websites for Higher Search Ranking in Google, Bing and Yahoo</td>                                
                                     </tr>
                                     <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Manage email and social media marketing campaigns</td>                                
-                                    </tr>
-                                    <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Use Google Analytics, Google AdWords, and other relevant sites</td>                                
-                                    </tr>
-                                    <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Drive traffic to client’s website</td>                                
-                                    </tr>
-                                    <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Keep abreast of new social media sites, web technologies, and digital marketing trends; implement these new technologies in developing campaigns and update current campaigns to include recent information</td>                                
-                                    </tr>
-                                    <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Develop website and maintain (Purchasing of Domain and Hosting not included)</td>                                
-                                    </tr>
-                                    <tr>
-                                        <td><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Inbound Marketing and Content Strategy</td>                                
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Targeted audience on Facebook and Google Ads</td>                                
                                     </tr>
                                 </table>
+                                <h6>Benefits of Digital Marketing Service for Businesses</h6>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Minimize time spent on planning your digital marketing campaigns</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Worry less about using complicated online marketing tools</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Reach out to your prospects without spending too much on ads</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Create personalised ads and content that your clients will love</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Engage with your audience using various platforms (email, social media, website)</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Gain more leads and increase your revenue</td>                                
+                                    </tr>
+                                </table>
+                                <h6>Advantages of Working with Us</h6>
+                                <p>We constantly update the strategy to ensure that it is in tune with the latest trends in the market. In addition, we make sure that every content or campaign published matches the taste of your customers and prospects and meets your standards. Every written, graphic or video content that we publish are carefully crafted by our specialists.<br/>Aside from providing quality content that will boost your site’s ranking, part of our digital marketing services includes maintaining the smooth operation of your sites. Our team can create the design, integrate functionalities, check mobile-responsiveness of pages, test the speed, and more. We also will make sure that the website will stay consistent with your company’s branding.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                                 <div style="height: 200px;"></div>
                             </div>
