--- a/social.html
+++ b/social.html
@@ -15,7 +15,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="bgpillars fullwidth">
+    <body class="bgpillars">
         <div class="container row white" style="width: 100% !important; max-width: 100%; overflow: hidden; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
@@ -44,34 +44,71 @@
                         <div class="col s12">
                             <div class="scroll">
                                 <h4>Social Media Management</h4>
-                                <p class="grey-text">Social media management is a critical part of any online marketing strategy. Social media allows you to expand your network and put your business on the radar of your prospect market. Most customers spend a lot of time on social media. They reach out about their orders and send inquiries through social media.  As such, creating and managing an active social media page for your business is a must. We at Deegeelab specialize in:</p>
-
+                                <p class="grey-text">Social media management is a critical part of any online marketing strategy. It allows you to expand your network and put your business on the radar of your prospect market. Millions of consumers spend long hours on their social media accounts. They reach out about their orders and send inquiries through social media. As such, creating and managing an active social media page for your business is a must. <br/>At Deegeelab, we take the time to listen and analyse your social media accounts. We also engage with your followers and communities.</p>
+                                <h6>Deegeelab Social Media Management Service Inclusive</h6>
                                 <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Creating Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</td>                                
+                                        <td>Creation of Social Media pages (Facebook, Instagram, Twitter, LinkedIn, etc.)</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Growing your followers and reaching out to your audience</td>                                
+                                        <td>Growing your followers and reaching out to your audience</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Engaging with related social media communities</td>                                
+                                        <td>Engaging with related social media communities</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Publishing written and graphic content that are consistent with your brand</td>                                
+                                        <td>Publishing written and graphic content that are consistent with your brand</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Replying to messages on your social media channels</td>                                
+                                        <td>Replying to messages on your social media channels</td>                                
                                     </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td> Keeping abreast with the latest social media trends in your industry</td>                                
+                                        <td>Keeping abreast with the latest social media trends in your niche</td>                                
                                     </tr>
                                 </table>
+                                <h6>Benefits of Social Media Management to Your Business </h6>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Get more time for your business</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Amplify your social media presence</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Connect with millions of potential clients</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Learn more about your target customers</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Publish targeted ads and get real-time feedback</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Enrich your customers’ experience</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Increase website traffic and engagement</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Improve site ranking in search engines (Google, Bing, Yahoo)</td>                                
+                                    </tr>
+                                </table>
+                                <h6>Advantages of Working with Us</h6>
+                                <p>By choosing Deegeelab, you can get friendly advice from Australia’s finest social media management experts. You can also benefit from cost effective and data-driven social media marketing techniques.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                                 <div style="height: 200px;"></div>
                             </div>
