--- a/webdev.html
+++ b/webdev.html
@@ -15,7 +15,7 @@
         <link href="assets/css/pillar.css" rel="stylesheet" type="text/css">
         <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     </head>
-    <body class="bgpillars fullwidth">
+    <body class="bgpillars">
         <div class="container row white" style="width: 100% !important; max-width: 100%; margin: 0px;">
             <div class="section" style="padding: 0 !important;">
                 <div class="white" id='display_desktop'>
@@ -43,42 +43,52 @@
                     <div class="col s12 m6 l6 services-content" >
                         <div class="col s12">
                             <div class="scroll">
-                                <h4>Website Development</h4>
-                                <p class="grey-text">Offering high-quality products or services is just one half of the challenge that businesses face today. In the last five years, Australia’s online shopping industry has grown rapidly. For business owners, this means that is highly recommended to have a website that has:</p>
+                                <h4>Social Media Management</h4>
+                                <p class="grey-text">Today, it is absolutely necessary to have a well coded website as it is one of the best ways to build online presence and connect with the global community. With the help of our specialists, your customers can enjoy accessing a website that meets their demands and satisfies their needs. Furthermore, we will ensure that your websites are regularly maintained and updated to avoid glitches and to upload new content.</p>
+                                <h6>Features of Websites We Create at Deegeelab</h6>
                                 <table class="grey-text paragraph">
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Mobile-responsive pages</td>                                
-                                    </tr>                                
+                                        <td>Mobile friendly design</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Clear, concise and engaging written content</td>                                
-                                    </tr>                                
-                                    <tr>
-                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Well-formatted graphics content</td>                                
-                                    </tr>                                
-                                    <tr>
-                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Working clickable elements</td>                                
-                                    </tr>                                
+                                        <td>Well designed graphics and written content</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
                                         <td>Secured data and payment channels</td>                                
-                                    </tr>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Quick and smooth page navigation</td>                                
-                                    </tr>                                
+                                        <td>Responsive page navigation</td>                                
+                                    </tr>
                                     <tr>
                                         <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Clean and up-to-date code</td>                                
-                                    </tr>                                
-                                    <tr>
-                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
-                                        <td>Consistently fast loading time</td>                                
-                                    </tr>                                
+                                        <td>Consistent fast loading time</td>                                
+                                    </tr>
                                 </table>
+                                <h6>Benefits of Having a Good Website to Your Business</h6>
+                                <table class="grey-text paragraph">
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Establish brand awareness</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Improved customer reach</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Provide more information to your customers</td>                                
+                                    </tr>
+                                    <tr>
+                                        <td width='1%'><i class="material-icons bulleted">brightness_1</i></td>
+                                        <td>Faster and easier communication with your customers</td>                                
+                                    </tr>
+                                </table>
+                                <h6>How we do it for you?</h6>
+                                <p>Our website development process involves understanding your expectation and goals. Then, we proceed to crafting the design plan of the website according to the specific that you will provide. Once you approve, we will start programming the site and creating and uploading the written and graphic content. Before public viewing, we will audit and test the site’s functionality.Through the course of the service, we will continuously update and test the website for any glitches. We can also add new elements upon your request.</p>
                                 <a href="index.html#contact" class="btn-round btn-flat waves-effect waves-light white-text">Let's Talk</a>
                                 <div style="height: 200px;"></div>
                             </div>
